terraform/cluster.tf
provider "aws" {
  version = "~> 2.44.0"
}

module "camtags" {
  source = "../Modules/camtags"
}

resource "aws_iam_role" "cluster_role" {
  name = "${var.cluster_name}-cluster-role"

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}

resource "aws_iam_role_policy_attachment" "cluster_role_AmazonEKSClusterPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = "${aws_iam_role.cluster_role.name}"
}

resource "aws_iam_role_policy_attachment" "cluster_role_AmazonEKSServicePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
  role       = "${aws_iam_role.cluster_role.name}"
}


resource "aws_security_group" "sg_cluster" {
  name        = "${var.cluster_name}-sg-cluster"
  description = "Cluster communication with worker nodes"
  vpc_id      = "${aws_vpc.cluster_vpc.id}"
  tags        = "${module.camtags.tagsmap}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group_rule" "sgr_cluster_https_ingress" {
  cidr_blocks       = ["0.0.0.0/0"]
  description       = "Allow external sources to communicate with the cluster API Server"
  from_port         = 443
  protocol          = "tcp"
  security_group_id = "${aws_security_group.sg_cluster.id}"
  to_port           = 443
  type              = "ingress"
}

locals {
  cluster_version = "${lookup(data.external.get_cluster_version.result, "cluster_version", "")}"
}

resource "aws_eks_cluster" "eks_cluster" {
  depends_on      = ["null_resource.validate-kube-version"]
  name            = "${var.cluster_name}"
  role_arn        = "${aws_iam_role.cluster_role.arn}"
  version         = "${local.cluster_version}"
  tags            = "${module.camtags.tagsmap}"

  vpc_config {
    security_group_ids = ["${aws_security_group.sg_cluster.id}"]
    subnet_ids         = ["${concat(aws_subnet.cluster_subnet_public.*.id, aws_subnet.cluster_subnet_private.*.id)}"]
  }

  depends_on = [
    "aws_iam_role_policy_attachment.cluster_role_AmazonEKSClusterPolicy",
    "aws_iam_role_policy_attachment.cluster_role_AmazonEKSServicePolicy",
  ]
}
